--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 baseurl: "/byron.GitHub.io" # the subpath of your site, e.g. /blog
-url: "https://yingjiebyron.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://yingjiebyron.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
