--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: "/index.html" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://yingjiebyron.github.io/byron.GitHub.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
