--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: https://yingjiebyron.github.io
 baseurl: /byron.GitHub.io/
 
 # Site settings
-title: Byron's profile and life
+title: Byron's Profile
 email: yingjie_li@mymail.sutd.edu.sg
 description: "This is a 101 profile for the learning journey in data science and what-about for Byron (Yingjie)"
 
@@ -13,25 +13,18 @@ people:
   pic: 1
   position: Data science enthusiast
   social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
+    - title: linkedIn
+      url: https://www.linkedin.com/in/yingjie-li-82a6b6160/
+    - title: github
+      url: https://github.com/yingjiebyron
+
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: https://www.linkedin.com/in/yingjie-li-82a6b6160/
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: https://github.com/yingjiebyron
+    - title: linkedIn
+      url: https://www.linkedin.com/in/yingjie-li-82a6b6160/
+    - title: github
+      url: https://github.com/yingjiebyron
 
 # Postal address (add as many lines as necessary)
 address:
