--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ people:
   pic: 1
   position: Data science enthusiast
   social:
-    - title: linkedIn
+    - title: linkedin
       url: https://www.linkedin.com/in/yingjie-li-82a6b6160/
     - title: github
       url: https://github.com/yingjiebyron
@@ -21,7 +21,7 @@ people:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-    - title: linkedIn
+    - title: linkedin
       url: https://www.linkedin.com/in/yingjie-li-82a6b6160/
     - title: github
       url: https://github.com/yingjiebyron
