--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ people:
   position: Data science enthusiast
   social:
     - title: linkedin
-      url: https://www.linkedin.com/in/yingjie-li-82a6b6160/
+      url: https://www.linkedin.com/in/ByronYingjieLi
     - title: github
       url: https://github.com/yingjiebyron
 
@@ -22,7 +22,7 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: linkedin
-    url: https://www.linkedin.com/in/yingjie-li-82a6b6160/
+    url: https://www.linkedin.com/in/ByronYingjieLi
   - title: github
     url: https://github.com/yingjiebyron
 
